# FTB-website

./: package-lock.json  package.json
backend/: pyproject.toml
backend/src/: .gitignore  auth.py  generate_accounts.py  main.py  questions.json
components/: BugCard.jsx
pages/: index.js
pages/challenge/: [id].js
styles/: globals.css
